--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,9 @@
     <body>
         <div class="main-content">
             {{>header}}
+
+            <p>This site was created by Pilux and uses data from external apis.</p>
+
             <img src="/img/ffirpoJedi.jpg" class="portrait" />
         </div>
 
